--- a/README
+++ b/README
@@ -5,6 +5,9 @@
 'the religion'
 
 
+# schizofrenie
+https://nl.wikipedia.org/wiki/Schizofrenie
+
 # nederland
 https://nl.wikipedia.org/wiki/Nederland
 
